--- a/README.textile
+++ b/README.textile
@@ -126,7 +126,7 @@ h3. Meet View Models render_as method
 
 View models feature template rendering: You can render any partial in your views, following your views directory tree structure: A view_model variable will automatically be included as a local variable in your partial if you render it with view models:
 
-Let's say you have the user model from before, and the following partial written for the view model to render named "info":
+Let's say you have the user model from before, and the following partial written for the view model to render named "_info":
 
 <pre><code>#user
   .name= view_model.name
